--- a/_posts/2019-01-31-HELLO-CSS3.md
+++ b/_posts/2019-01-31-HELLO-CSS3.md
@@ -138,12 +138,111 @@ categories: IT
 
 <!-- 서머리 -->
 <div class="has-animation animation-ltr" data-delay="2000">
-<p>
-요즘에는 점점 더 많은 웹사이트들이 GIF, SVG, WebGL, 배경 비디오 등의 형태를 이용하여 애니메이션을 사용하고있습니다. 
-제대로 사용한다면 웹 상의 애니메이션들은 웹사이트의 활력을 불어넣고 상호작용을 이끌어낼 수 있으며
-이는 별도의 피드백 요소와 경험을 사용자에게 추가로 제공하는 역할을 할 수 있을 것입니다.
-</p>
+웹페이지를 동적이고 화려하게 만들어줄 animation 효과
+무엇으로 사용해야 될까? js? jquery? adobe flash?
 </div>
+<div class="has-animation animation-ltr" data-delay="2000">
+과거 웹페이지의 동적이고 화려한 효과를 만들기 위해서는 JAVASCRIPT or JQUERY 그리고 어도비플래쉬를 이용해서 만들었습니다.
+CSS는 색,레이아웃 등 마크업 언어를 표현아는언어로, 제한적인 작업들만 가능했지만, CSS3가 등장하면서 표현할 수 있는 범위가 넓어졌습니다.
+CSS3에는 "animation" 기능이 추가되어 일정 범위 안에 있던 동적이고 화려한 효과를 CSS3만으로도 대체 할수 있을정도로 발전했습니다.
+CSS3의 동적이고 화려한 "animation"기능을 소개합니다.
+</div>
+
+
+<div class="has-animation animation-ltr" data-delay="2000">
+소개하기전 CSS의 역사를 알아보도록 하겠습니다.
+
+-------내용이 지루하니 접기, 궁금하면 눌러서 펼치기
+
+CSS 표준에는 CSS1, CSS2, CSS2.1, CSS3가 있습니다.
+
+CSS1
+1996년 12월에 정식 권고가 된 표준입니다. 폰트, 배경 색, 테이블 등의 서식을 다뤘지만 지금은 더 이상 사용하지 않고, W3C에서도 관리하고 있지 않습니다.
+
+CSS2
+1998년 5월에 정식 권고가 된 표준입니다. 현재 주로 사용하는 CSS 2.1의 바탕이 된 표준이지만 오류가 많고 또 브라우저 제작사가 구현하지 않은 기능도 많았기 때문에 W3C에서 개정판인 CSS 2.1을 만들게 되었습니다. CSS 2.1이 정식 권고안이 된 후로는 W3C에서 관리하지 않고 있습니다.
+
+CSS2.1
+2004년에 후보 권고안(Candidate Recommendation)이 되었으나 다시 초안(Working Draft) 단계를 거쳐서 최정적으로 2011년 6월에 정식 권고가 된 표준입니다.
+보통 우리가 CSS 2라고 말할 때는 현재 사용하지 않는 최초의 CSS 2 대신 CSS 2.1을 의미합니다.
+
+CSS3
+CSS 3는 이전 버전과는 달리 하나의 큰 표준이 아니라 모듈별로 각각의 표준이 존재합니다. 예를 들어서 CSS Color, CSS Selector, CSS Syntax, CSS Background 등의 다양한 모듈이 각각 독립적으로 정식 권고가 되는 과정을 거치고 있습니다. 2011년 현재 40개 이상의 모듈이 개발되고 있으며 극히 드물지만 CSS 3 Color 모듈 같은 경우에는 정식 권고가 되었습니다.
+아직 많은 모듈이 정식 권고가 되지 않았음에도 불구하고 최근 출시되는 브라우저는 CSS 3를 상당히 잘 지원합니다. 하지만 아직 웹 사용자의 대부분이 사용하는 인터넷 익스플로러 6~8 버전에서 지원하지 않기 때문에 모바일을 제외한 환경에서는 사용도가 높지 않습니다.
+
+-------내용이 지루하니 접기, 궁금하면 눌러서 펼치기
+</div>
+
+<div class="has-animation animation-ltr" data-delay="2000">
+ANIMATION? 뭐 움직이는 거겠지.. 근데 어떻게 쓰는건데?
+</div>
+<div class="has-animation animation-ltr" data-delay="2000">
+1.ANIMATION 사용하기
+ANIMATION 속성
+
+animation-duration 
+:애니메이션 효과를 재생할 시간을 설정
+
+animation-delay 
+:애니메이션 효과가 나타나기까지의 지연 시간 
+:설정된 시간이 흐른 뒤에 시작
+
+animation-iteration-count 
+:애니메이션 효과의 반복 횟수 설정
+
+animation-direction 
+:애니메이션의 진행 방향 설정
+
+animation-timing-function 
+: 애니메이션 속도(가속/감속 시간간격등 설정) 
+(linear,ease,ease-in,ease-out,ease-in-out,step-start,step-end,steps(int,start|end),cubic-bezier(n,n,n,n),initial,inherit)
+
+animation-name 
+: 애니메이션 이름 
+
+animation-play-state 
+: 애니메이션 효과의 재생 상태 설정
+
+animation-fill-mode 
+:애니메이션 효과가 재생 중이 아닐 때 요소의 스타일을 설정
+</div>
+<div class="has-animation animation-ltr" data-delay="2000">
+정리!! animation : 애니메이션이름 진행시간 가속도 지연시간 반복횟수 방향
+</div>
+
+<div class="has-animation animation-ltr" data-delay="2000">
+2.@keyframes ?????
+:: 애니메이션이름?
+
+@keyframes 애니메이션이름 { 
+  from {} 
+  to {} 
+}
+@keyframes 애니메이션이름 { 
+  0% {} 
+  100% {} 
+}
+애니메이션 from, to 또는 %도 (0%~ 100%) 사용한다
+</div>
+
+<div class="has-animation animation-ltr" data-delay="2000">
+3.귀찮고 복잡해보이는 ANIMATION... 쉽게 쓰는 방법??
+:: 사이트 소개
+
+http://www.justinaguilar.com/animations
+https://daneden.github.io/animate.css
+https://minimamente.com/example/magic_animations
+https://matthewlein.com/tools/ceaser
+</div>
+
+<div class="has-animation animation-ltr" data-delay="2000">
+마무리 
+CSS3 만으로도 동적이고 화려한 효과를 만들수도 있지만 기존 JAVASCRIPT & JQUERY를 이용하면 조금더 화려한 웹페이지가 만들어지지 않을까요?
+이상 CSS3의 ANIMATION을 알아봤습니다.
+
+END ☺
+</div>
+
 
 <!-- 본문 -->
 <div class="has-animation animation-ltr" data-delay="2000">
@@ -155,9 +254,6 @@ categories: IT
 </div>
 
 <!-- 끝 -->
-<div class="has-animation animation-ltr" data-delay="2000">
-	<p>END ☺</p>
-</div>
 
 
 <!-- script -->
@@ -170,6 +266,7 @@ $('.has-animation').each(function(index) {
         });    
     }   
 });  
+
 $(window).scroll(function() { 
 	$('.has-animation').each(function(index) {
   		if($(window).scrollTop() + $(window).height() > $(this).offset().top ){ 
@@ -179,4 +276,5 @@ $(window).scroll(function() {
   		}   
 	});   
 });
+
 </script>
